Remove extra text from session labels

--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
         
         // 課程梯次定義，包含 value (用於提交) 和 label (用於顯示)
         const sessions = [
-            { value: '梯次一', label: '梯次一：12/16（二）10:00–12:00 (講師：江承洋) - Git' },
-            { value: '梯次二', label: '梯次二：12/23（二）09:00–10:00 (講師：馮瀞萱) - 零程式碼' },
-            { value: '梯次三', label: '梯次三：12/23（二）10:00–11:00 (講師：馮瀞萱) - 零程式碼' },
-            { value: '梯次四', label: '梯次四：12/23（二）11:00–12:00 (講師：馮瀞萱) - 零程式碼' },
-            { value: '梯次五', label: '梯次五：12/24（三）09:00–10:00 (講師：方義順) - Claud Code' },
-            { value: '梯次六', label: '梯次六：12/24（三）10:00–11:00 (講師：方義順) - Claud Code' },
-            { value: '梯次七', label: '梯次七：12/24（三）11:00–12:00 (講師：方義順) - Claud Code' },
+            { value: '梯次一', label: '梯次一：12/16（二）10:00–12:00 (講師：江承洋) ' },
+            { value: '梯次二', label: '梯次二：12/23（二）09:00–10:00 (講師：馮瀞萱) ' },
+            { value: '梯次三', label: '梯次三：12/23（二）10:00–11:00 (講師：馮瀞萱) ' },
+            { value: '梯次四', label: '梯次四：12/23（二）11:00–12:00 (講師：馮瀞萱) ' },
+            { value: '梯次五', label: '梯次五：12/24（三）09:00–10:00 (講師：方義順) ' },
+            { value: '梯次六', label: '梯次六：12/24（三）10:00–11:00 (講師：方義順) ' },
+            { value: '梯次七', label: '梯次七：12/24（三）11:00–12:00 (講師：方義順) ' },
         ];
 
         /**
